--- a/styles/style.css
+++ b/styles/style.css
@@ -99,14 +99,13 @@ video {
 
 .content__video-card-thumbnail {
   height: 103px;
-  width: 194px;
+  min-width: 194px;
   object-fit: fill;
   object-position: center;
 }
 
 .content__video-card-description-container {
-  width: 100%;
-  height: 100%;
+  flex-grow: 1;
 }
 
 .search-form__fieldset-title {
@@ -121,7 +120,7 @@ video {
   font-size: 75px;
   font-weight: 700;
   text-transform: uppercase;
-  line-height: 94%;
+  line-height: 0.94;
 }
 
 .content__accent {
@@ -139,10 +138,11 @@ video {
   font-size: 30px;
   font-weight: 700;
   text-transform: uppercase;
-  line-height: 100%;
+  line-height: 1;
   padding-top: 2px;
   padding-left: 2px;
 
+  max-width: 200px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -152,7 +152,7 @@ video {
   font-family: "Fira Sans Condensed", "sans-serif";
   font-size: 18px;
   font-weight: 400;
-  line-height: 16.2px;
+  line-height: 0.162;
 }
 
 .visually-hidden {
@@ -212,7 +212,7 @@ video {
 }
 
 .search-form__label-text {
-  line-height: 19px;
+  line-height: 0.19;
 }
 
 .search-form__label:hover .search-form__label-text {
